; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/helpers/dtoverlay/extr_dtoverlay.c_dtoverlay_find_override.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/helpers/dtoverlay/extr_dtoverlay.c_dtoverlay_find_override.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [15 x i8] c"/__overrides__\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"/__overrides__ node not found\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"Found override %s\00", align 1
@.str.3 = private unnamed_addr constant [34 x i8] c"/__overrides__ has no %s property\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @dtoverlay_find_override(%struct.TYPE_3__* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @fdt_path_offset(i32 %13, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %3
  %18 = call i32 (i8*, ...) @dtoverlay_debug(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0))
  %19 = load i32, i32* %8, align 4
  %20 = load i32*, i32** %7, align 8
  store i32 %19, i32* %20, align 4
  store i8* null, i8** %4, align 8
  br label %40

21:                                               ; preds = %3
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* %8, align 4
  %26 = load i8*, i8** %6, align 8
  %27 = call i8* @fdt_getprop(i32 %24, i32 %25, i8* %26, i32* %10)
  store i8* %27, i8** %9, align 8
  %28 = load i32, i32* %10, align 4
  %29 = load i32*, i32** %7, align 8
  store i32 %28, i32* %29, align 4
  %30 = load i8*, i8** %9, align 8
  %31 = icmp ne i8* %30, null
  br i1 %31, label %32, label %35

32:                                               ; preds = %21
  %33 = load i8*, i8** %6, align 8
  %34 = call i32 (i8*, ...) @dtoverlay_debug(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0), i8* %33)
  br label %38

35:                                               ; preds = %21
  %36 = load i8*, i8** %6, align 8
  %37 = call i32 (i8*, ...) @dtoverlay_debug(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.3, i64 0, i64 0), i8* %36)
  br label %38

38:                                               ; preds = %35, %32
  %39 = load i8*, i8** %9, align 8
  store i8* %39, i8** %4, align 8
  br label %40

40:                                               ; preds = %38, %17
  %41 = load i8*, i8** %4, align 8
  ret i8* %41
}

declare dso_local i32 @fdt_path_offset(i32, i8*) #1

declare dso_local i32 @dtoverlay_debug(i8*, ...) #1

declare dso_local i8* @fdt_getprop(i32, i32, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
